# birchbeer

./: README.md  build.gradle  dependencies.gradle  gradle.properties  settings.gradle
.github/workflow/: ci.yml
.github/workflows/: ci.yml
app/: build.gradle
app/release/: birchBeer-0.0.1-[13]-release-unsigned.apk  birchBeer-release-0.0.1.aar
app/src/main/: AndroidManifest.xml
app/src/main/java/com/birchbeer/sample/: CheckForRootWorker.kt  MainActivity.kt  RootItemResult.kt  RootSampleApp.kt
app/src/main/java/com/birchbeer/sample/extensions/: ViewExtensions.kt
app/src/main/java/com/birchbeer/sample/ui/: ResultIconView.kt  RootItemAdapter.kt  RootedResultTextView.kt  ScopedActivity.kt
app/src/main/res/layout/: activity_main.xml  item_root_check.xml
app/src/main/res/values/: strings.xml
birchBeer/: build.gradle  gradle.properties
birchBeer/src/main/java/com/birchbeer/: Const.java  RootBeer.java  RootBeerNative.java
birchBeer/src/main/java/com/birchbeer/util/: QLog.java  Utils.java
birchBeer/src/main/jni/: CMakeLists.txt  toolChecker.cpp  toolChecker.h
birchBeer/src/main/res/values/: strings.xml
birchBeer/src/test/java/com/birchbeer/: RootBeerTest.java
